updates meet syaafi text, align fix section center, update testimonial

--- a/css/agency-website-8f69b0.webflow.css
+++ b/css/agency-website-8f69b0.webflow.css
@@ -8833,3 +8833,15 @@ UNIVERSAL
     font-size: 10px;
   }
 }
+
+/* SERVICE SECTION CHANGE FOR 2 SERVICE */
+.service-flex-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+@media screen and (max-width: 480px) {
+  .service-flex-container{
+    flex-direction: column;
+  }
+}
